# candle

./: Cargo.toml  DEEP_SEA_MUSINGS.md  PLAN.md  PLANNING.md  TODO.md  VULKAN_BACKEND_PLAN.md  VULKAN_ROADMAP.md
candle-core/: Cargo.toml
candle-core/examples/: hip_basics.rs  hip_neural_net.rs  vulkan_basics.rs  vulkan_test.rs
candle-core/src/: custom_op.rs  device.rs  display.rs  dummy_hip_backend.rs  dummy_vulkan_backend.rs  error.rs  lib.rs  safetensors.rs  storage.rs  tensor.rs  test_utils.rs  utils.rs
candle-core/src/hip_backend/: device.rs  error.rs  ffi.rs  memory.rs  mod.rs
candle-core/src/quantized/: dummy_vulkan.rs  ggml_file.rs  mod.rs  vulkan.rs
candle-core/src/vulkan_backend/: device.rs  error.rs  mod.rs  utils.rs
candle-core/tests/: hip_tests.rs  quantized_tests.rs  vulkan_tests.rs
candle-hip-flash-attn/: Cargo.toml  build.rs
candle-hip-flash-attn/kernels/: flash_fwd.hip
candle-hip-flash-attn/src/: lib.rs
candle-hip-kernels/: Cargo.toml  build.rs
candle-hip-kernels/src/: affine.hip  binary.hip  binary_op_macros.h  cast.hip  compatibility.h  conv.hip  fill.hip  hip_utils.h  indexing.hip  lib.rs  quantized.hip  reduce.hip  sort.hip  ternary.hip  unary.hip
candle-pyo3/src/: lib.rs
candle-vulkan-kernels/: Cargo.toml  build.rs
candle-vulkan-kernels/examples/q4_0_demo/: Cargo.toml
candle-vulkan-kernels/examples/q4_0_demo/shaders/: mul_mat_vec_q4_0_f32.comp
candle-vulkan-kernels/examples/q4_0_demo/src/: main.rs
candle-vulkan-kernels/examples/vulkan_matmul_demo/: Cargo.toml  build.rs
candle-vulkan-kernels/examples/vulkan_matmul_demo/shaders/: add.comp  matmul.comp
candle-vulkan-kernels/examples/vulkan_matmul_demo/src/: main.rs
candle-vulkan-kernels/src/: context.rs  device.rs  error.rs  kernels.rs  lib.rs  quant_types.rs  storage.rs
candle-vulkan-kernels/src/ops/: binary.rs  matvec.rs  mod.rs  unary.rs
candle-vulkan-kernels/src/shaders/: binary.comp  matmul.comp  matmul_f32.comp  matvec.comp  reduce.comp  unary.comp
candle-vulkan-kernels/src/shaders/ggml/: exp_strided.comp  gelu_strided.comp  mul_mat_vec.comp  relu_strided.comp  silu_strided.comp
candle-vulkan-kernels/tests/: matvec_test.rs
