[package]
name = "candle-hip-kernels"
version = "0.9.2-alpha.1"
edition = "2021"

description = "HIP/ROCm kernels for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning", "rocm", "hip"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
cc = "1.0"
