[package]
name = "candle-vulkan-kernels"
version = "0.9.2-alpha.1"
edition = "2021"
description = "Vulkan kernels for Candle ML framework"
repository = "https://github.com/huggingface/candle"
keywords = ["machine-learning", "gpu", "vulkan", "quantization"]
categories = ["science"]
license = "MIT"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
half = "2.3"
thiserror = "1.0"
parking_lot = "0.12"
anyhow = "1.0"
sha2 = "0.10"
ash = { version = "0.38", optional = true }
gpu-allocator = { version = "0.27", optional = true }
shaderc = { version = "0.8", optional = true }

[features]
default = ["vulkan"]
vulkan = ["ash", "gpu-allocator", "shaderc"]

[[example]]
name = "q4_0_demo"
path = "examples/q4_0_demo/src/main.rs"
required-features = ["vulkan"]
