[package]
name = "candle-vulkan-kernels"
version = "0.1.0"
edition = "2021"
description = "Vulkan compute kernels for Candle"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
ash = "0.38"
vk-mem = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"
parking_lot = "0.12"
half = "2.3"

[build-dependencies]
shaderc = "0.8"

[dev-dependencies]
anyhow = "1.0"
